--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.10'
+version: '3.12'
 
 services:
     postgres:
@@ -18,18 +18,9 @@ services:
               - djangonetwork
         restart: unless-stopped
 
-    redis:
-        container_name: Redis
-        image: redis:alpine 
-        restart: always
-        ports:
-            - 6379:6379
-        networks:
-              - djangonetwork
-
     web:
         container_name: Django
-        build:  ./shtutgart_api
+        build:  ./user_links_api
         restart: always
         volumes:
             - postgres:/code/postgres
@@ -38,23 +29,9 @@ services:
             - 8000:8000
         depends_on:
             - postgres
-            - redis   
         networks:
               - djangonetwork  
     
-    celery:
-        container_name: Celery
-        build:  ./shtutgart_api
-        command: "pipenv run celery -A shtutgart_api worker -l INFO"
-        depends_on:
-            - web
-            - redis
-            - postgres
-        restart: on-failure
-        networks:
-            - djangonetwork
-            
-
 networks:
       djangonetwork:
           driver: bridge
