--- a/user_links_api/Pipfile
+++ b/user_links_api/Pipfile
@@ -5,25 +5,26 @@ name = "pypi"
 
 [packages]
 django = "==5.0"
-django-cors-headers = "*"
-django-extensions = "*"
-django-filter = "*"
-djangorestframework = "*"
-djangorestframework-jwt = "*"
-ipython = "*"
-psycopg2-binary = "*"
-python-dotenv = "*"
-loguru = "*"
-gunicorn = "*"
-drf-spectacular = "*"
-requests="*"
-parsel = "*"
-faker = "*"
-Pillow = "*"
+django-cors-headers = "==4.6.0"
+django-extensions = "==3.2.3"
+django-filter = "==24.3"
+djangorestframework = "==3.15.2"
+djangorestframework-jwt = "==1.11.0"
+ipython = "==8.29.0"
+psycopg2-binary = "==2.9.10"
+python-dotenv = "==1.0.1"
+loguru = "==0.7.2"
+gunicorn = "==23.0.0"
+drf-spectacular = "==0.27.2"
+requests="==2.32.3"
+parsel = "==1.9.1"
+faker = "==33.0.0"
+Pillow = "==11.0.0"
+pytz= "*"
 
 [dev-packages]
-pre-commit = "*"
-flake8 = "*"
+pre-commit = "==4.0.1"
+flake8 = "==7.1.1"
 
 [requires]
 python_version = "3.12"
