--- a/user_links_api/.env.example
+++ b/user_links_api/.env.example
@@ -20,19 +20,12 @@ DJANGO_SUPERUSER_PASSWORD=admin
 
 
 # For local test
-DB_HOST=127.0.0.1
+# DB_HOST=127.0.0.1
+
+# For Docker
+DB_HOST=PostgreSQL
+
 DB_PORT=5432
 DB_NAME=links
 DB_USER=postgres
 DB_PASS=123456789
-
-
-
-# # For Docker
-# DB_HOST=PostgreSQL
-# DB_PORT=5432
-# DB_NAME=links
-# DB_USER=postgres
-# DB_PASS=123456789
-
-
