--- a/user_links_api/Pipfile
+++ b/user_links_api/Pipfile
@@ -21,6 +21,7 @@ parsel = "==1.9.1"
 faker = "==33.0.0"
 Pillow = "==11.0.0"
 pytz= "*"
+typing-extensions ="*"
 
 [dev-packages]
 pre-commit = "==4.0.1"
